plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.2'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'unq.edu.li.pdes'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

ext {
    mapstructVersion = "1.5.3.Final"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
  	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.5'
  	implementation group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.3.9.Final'
  	implementation 'javax.ws.rs:javax.ws.rs-api:2.1'
	implementation 'io.springfox:springfox-swagger2:3.0.0'
	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation 'javax.xml.bind:jaxb-api:2.3.0'
	implementation 'ma.glasnost.orika:orika-core:1.5.1'
	implementation 'commons-beanutils:commons-beanutils:1.9.4'
    testImplementation "org.testng:testng:6.10", "org.easytesting:fest-assert:1.4"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core:5.0.0'
	testCompileOnly 'junit:junit:4.12' 
	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.1'
	implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.13.3'
}

tasks.named('test') {
	useJUnitPlatform()
}